fixed the div row overflow issue

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -12,8 +12,18 @@
      font-weight: 300;
  }
  
+ hr {
+     margin: 2px 2px 2px 2px;
+ }
+ 
  #container {
      width: 90%;
+     margin-left: auto;
+     margin-right: auto;
+ }
+
+ .row {
+     width: 100%;
  }
  
  
@@ -46,6 +56,11 @@
  .text-left {
      text-align: left;
  }
+ .custom-navbar {
+     margin-bottom: 3px;
+
+ }
+
  .attribute {
      color:#51c5ee;   
  }
